--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="7YiubERgaN8UtgdeR5wA3DPIY8cN4lQLJF37hXYNMSw" />
     <title>DisBlog</title>
     <style>
         body {
