--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="marbot30"></div>
     <hr>
     <p>DisBlog is a Blog platform powered by GitHub discussions on your repo. You can post things by creating a discussion and it supports markdown formatting.</p>
+    <p><a href="https://stuffzez.github.io/Blog/posts/3">View a real demo article (Customised Page Layout)</a>, <a href="https://github.com/StuffzEZ/Blog/discussions/3">View that page's markdown</a></p>
     <p>To get DisBlog, <a href="https://github.com/StuffzEZ/DisBlog/fork">fork the repository</a> then follow the steps below</p>
     <ol style="text-align: center; list-style-position: inside; padding-left: 0;">
         <li>Enable discussions on that repository</li>
